--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       <h1>Я тут!(лаба)</h1>
       <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom">
           <Scene>
-              <TimeSensor id="Time" DEF='Time' cycleInterval='5' loop='true' enabled='true'></TimeSensor>
-              <PositionInterpolator DEF='PosInt_Black1' key='0 0.5 1' keyValue='0 0 0, 0 -0.2 0, 0 0 0'></PositionInterpolator>
-              <Transform DEF="Piano">
+            <!--<Пианино>-->
+              <Transform DEF="Piano" scale="0.5 0.5 0.5" translation="0 -1.5 -13">
                   <Transform DEF="Black1" translation="0 0 0">
                       <Shape DEF="Black_clav">
                           <Appearance>
@@ -179,6 +178,233 @@
               <ROUTE fromNode='PosInt_White5' fromField='value_changed'
                      toNode='White5' toField='set_translation'>
               </ROUTE>
+              <!--</Пианино>-->
+              <Background skyAngle='0.9 1.57 2.3'skyColor='0.21 0.18 0.66 0.2
+                        0.44 0.85 0.75 0.6 0.4 0.77 0.8 0.82'></Background>
+              <DirectionalLight ambientIntensity="0.5" direction="0 -1 0" on="true" shadowIntensity='0.5'
+                              shadowCascades="0.5"
+                              intensity="0.8" global="true"></DirectionalLight>
+              <NavigationInfo Headlight="false" type='NONE'></NavigationInfo>
+              <Viewpoint fieldOfView="1" position="-8 -1.5 4"
+                       orientation="0 -1 0 0.5"></Viewpoint>
+              <Viewpoint fieldOfView="1" position="0 -0.5 -9" orientation="-1 0 0 0.3">></Viewpoint>
+              <Transform DEF="DEER" rotation="0 1 0 1.57" translation="0 -4 0">
+                <Inline url="Deer.x3d"></Inline>
+              </Transform>
+              <TimeSensor id="Time_for_deer" DEF='Time_for_deer' cycleInterval='5' loop='true' enabled='true'></TimeSensor>
+              <PositionInterpolator DEF='PosInt_Deer' key='0 0.2 0.4 0.6 0.8 1'
+                                    keyValue='6 -4 0, 3 -2 0, 0 -4 0, -3 -2 0, -6 -4 0, -8 -2 0'></PositionInterpolator>
+              <ROUTE fromNode='Time_for_deer' fromField='fraction_changed'
+                     toNode='PosInt_Deer' toField='set_fraction'>
+              </ROUTE>
+              <ROUTE fromNode='PosInt_Deer' fromField='value_changed'
+                     toNode='DEER' toField='set_translation'>
+              </ROUTE>
+          <!--<ПОЛЕ>-->
+          <Transform translation='-12 -5 -20'>
+              <Shape>
+                  <Appearance>
+                      <ImageTexture url="58d4cc26e7417.jpg"></ImageTexture>
+                      <Texturetransform repeatS="True" repeatT="True" scale="3 3"></Texturetransform>
+                  </Appearance>
+                  <ElevationGrid xDimension="10" zDimension="11" xSpacing="2.5" zSpacing="2.5" solid="false"
+                                 height="1.5, 2.1, 1.5, 1.1, 1.1, 1.1, 1.1, 0.6, 0.9, 1.0,
+                                         1.3, 0.9, 0.7, 1.1, 1.1, 1.1, 1.1, 0.8, 1.5, 1.2,
+                                         1.0, 0.5, 0.8, 1.1, 1.1, 1.1, 1.1, 0.9, 0.7, 0.9,
+                                         0.8, 1.1, 0.7, 1.1, 1.1, 1.1, 1.1, 1.0, 0.3, 0.6,
+                                         0.9, 1.9, 1.0, 1.1, 1.1 ,1.1, 1.1, 0.9, 0.1, 0.6,
+                                         1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1,
+                                         1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1,
+                                         1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.2,
+                                         0.8, 0.9, 1.2, 0.9, 1.0, 0.8, 0.7, 0.9, 1.3, 1.5,
+                                         1.1, 1.3, 1.5, 1.2, 1.0, 1.3, 0.9, 0.7, 0.6, 0.5">
+                  </ElevationGrid>
+              </Shape>
+          </Transform>
+          <!--</ПОЛЕ>-->
+          <!--<ДОРОГА>-->
+        <Transform translation='0 -3.8 -5'>
+            <Transform translation='-0.5 0 0'>
+                <Shape>
+                    <Appearance>
+                        <ImageTexture url="road_brick_65.jpg"></ImageTexture>
+                        <Texturetransform repeatS="True" repeatT="True" scale="4 1"></Texturetransform>
+                    </Appearance>
+                    <Box size="20 .3 5"></Box>
+                </Shape>
+            </Transform>
+            <Transform translation='0 0 -7.0'>
+                <Shape>
+                    <Appearance>
+                        <ImageTexture url="road_brick_65.jpg"></ImageTexture>
+                        <Texturetransform repeatS="True" repeatT="True" scale="1.5 1.5"></Texturetransform>
+                    </Appearance>
+                    <Box size="11 .3 9"></Box>
+                </Shape>
+            </Transform>
+            <Transform translation='0 0 -7.5'>
+                <Shape>
+                    <Appearance>
+                        <ImageTexture url="A135A_wood-siding_021914-1160x773.jpg"></ImageTexture>
+                        <Texturetransform repeatS="True" repeatT="True" scale="1.5 1.5"></Texturetransform>
+                    </Appearance>
+                    <Box size="10 1 10"></Box>
+                </Shape>
+            </Transform>
+        </Transform>
+        <!--</ДОРОГА>-->
+        <!--<КОРОБКА ДОМА>-->
+        <Transform translation='0 -1.5 -15'>
+          <!--<ДВЕРЬ>-->
+              <Anchor url="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D0%B2%D0%B5%D1%80%D0%BD%D0%B0"
+                      parameter="target='_self'">
+                  <Transform translation='-1 -0.5 6'>
+                      <Shape>
+                          <Appearance>
+                              <ImageTexture url="brownoakdoors-p.jpg"></ImageTexture>
+                              <Texturetransform repeatS="True" repeatT="True"
+                                                scale="1 1"></Texturetransform>
+                          </Appearance>
+                          <Box size="2 3 0.3"></Box>
+                      </Shape>
+                  </Transform>
+                  <Transform translation='1 -0.5 6'>
+                      <Shape>
+                          <Appearance>
+                              <ImageTexture url="brownoakdoors-l.jpg"></ImageTexture>
+                              <Texturetransform repeatS="True" repeatT="True"
+                                                scale="1 1"></Texturetransform>
+                          </Appearance>
+                          <Box size="2 3 0.3"></Box>
+                      </Shape>
+                  </Transform>
+              </Anchor>
+              <!--</ДВЕРЬ>-->
+            <!--<КРЫША>-->
+            <Transform translation='0 3.7 3'>
+                <Shape>
+                    <Appearance>
+                        <ImageTexture url="A135A_wood-siding_021914-1160x773.jpg"></ImageTexture>
+                        <Texturetransform repeatS="True" repeatT="True" scale="1 1"></Texturetransform>
+                    </Appearance>
+                    <Pyramid height="2.5" xbottom="10.5" ybottom="7" xtop="4" ytop="2"></Pyramid>
+                </Shape>
+            </Transform>
+            <!--</КРЫША>-->
+            <!--<СТЕНЫ>-->
+            <Transform translation='-4.5 -2.2 0' scale="1.8 1 1.2">
+                <Shape>
+                    <Appearance>
+                        <ImageTexture url="1558314.jpg"></ImageTexture>
+                        <Texturetransform repeatS="True" repeatT="True" scale="5 5"></Texturetransform>
+                    </Appearance>
+                    <IndexedFaceSet ccw="true" convex="true" creaseAngle="0" normalPerVertex="true" solid="false"
+                                    coordIndex="0 1 2 3 -1 4 5 6 7 -1 8 9 10 11 -1 12 13 14 15">
+                        <Coordinate point="0 0 5, 0 5 5, 1.5 5 5, 1.5 0 5, 1.5 5 5,
+                                    3.5 5 5, 3.5 3 5, 1.5 3 5, 3.5 0 5, 3.5 5 5,
+                                    5 5 5, 5 0 5, 5 5 0, 5 0 0, 0 0 0, 0 5 0,
+                                    0 0 0, 0 0 5, 0 1.5 5, 0 1.5 0, 0 3.5 0,"></Coordinate>
+                    </IndexedFaceSet>
+                </Shape>
+                <Transform>
+                    <Shape DEF="WALL">
+                        <Appearance>
+                            <ImageTexture url="1558314.jpg"></ImageTexture>
+                            <Texturetransform repeatS="True" repeatT="True" rotation="1.57" scale="5 5"></Texturetransform>
+                        </Appearance>
+                        <IndexedFaceSet ccw="true" convex="true" creaseAngle="0"
+                                        normalPerVertex="true" solid="false"
+                                        coordIndex="0 1 2 3 -1 4 5 6 7 -1 8 9 10 11 -1 12 13 14 15">
+                            <Coordinate point="5 5 5, 5 5 0, 5 3.5 0, 5 3.5 5, 5 0 5,
+                                        5 1.5 5, 5 1.5 0, 5 0 0, 5 1.5 3.5, 5 3.5 3.5,
+                                        5 3.5 5, 5 1.5 5,5 3.5 0, 5 1.5 0, 5 1.5 1.5, 5 3.5 1.5"></Coordinate>
+                        </IndexedFaceSet>
+                    </Shape>
+                </Transform>
+                <Transform translation='-5 0 0'>
+                    <Shape USE="WALL"></Shape>
+                </Transform>
+            </Transform>
+            <!--</СТЕНЫ>-->
+        </Transform>
+        <!--</КОРОБКА ДОМА>-->
+        <!--<ДЫМОХОД>-->
+        <Transform translation='3.5 2.5 -12'>
+            <Shape>
+                <Appearance>
+                    <ImageTexture url="1558314.jpg"></ImageTexture>
+                    <Texturetransform repeatS="True" repeatT="True" scale="2 2"></Texturetransform>
+                </Appearance>
+                <Extrusion beginCap='false' endCap='false' solid='false'
+                           crossSection='[(1, 1), (1, -1), (-1, -1), (-1, 1), (1,1)]'
+                           scale='[1 1, 0.5 0.5]'
+                           spine='[0 -1 0, 0 1 0]'>
+                </Extrusion>
+            </Shape>
+        </Transform>
+        <!--</ДЫМОХОД>-->
+        <!--<ФОНАРЬ>-->
+          <Transform translation='-6 -1.5 -4.5'>
+              <Group DEF="FONAR">
+                  <Shape>
+                      <Appearance>
+                          <Material diffuseColor='#382419'
+                                    specularColor="#d6c5b4"
+                                    shininess="1"></Material>
+                      </Appearance>
+                      <Cylinder radius="0.2" height="5"></Cylinder>
+                  </Shape>
+                  <Transform rotation='0 0 1 1.57' translation='0 2 0'>
+                      <Shape>
+                          <Appearance>
+                              <Material diffuseColor='#382419'
+                                        specularColor="#d6c5b4"
+                                        shininess="1"></Material>
+                          </Appearance>
+                          <Cylinder radius="0.1" height="2.8"></Cylinder>
+                      </Shape>
+                  </Transform>
+                  <Transform translation='1 1.55 0'>
+                    <PointLight radius="1" color="1 1 0" on="true"
+                                    location="0 -0.5 0"></PointLight>
+                      <Shape DEF='SVET'>
+                          <Appearance>
+                              <Material DEF="Mat" diffuseColor='#382419'
+                                        specularColor="#d6c5b4"
+                                        shininess="1"></Material>
+                          </Appearance>
+                          <Cone height="0.7" bottomRadius="0.6" topRadius="0.3"></Cone>
+                      </Shape>
+                  </Transform>
+                  <Transform translation='-1 1.55 0'>
+                    <PointLight radius="0.7" color="0 1 1" on="true"
+                                    location="0 -0.5 0"></PointLight>
+                      <Shape USE='SVET'>
+                      </Shape>
+                  </Transform>
+              </Group>
+          </Transform>
+          <!--</ФОНАРЬ>-->
+          <!--<ФОНАРЬ1>-->
+          <Transform translation='6 -1.5 -4.5'>
+            <Transform translation='-1 1.55 0'>
+                  <PointLight radius="0.7" color="1 1 0" on="true"
+                              location="0 -0.5 0"></PointLight>
+              </Transform>
+              <Transform translation='1 1.55 0'>
+                    <PointLight radius="0.7" color="1 0 1" on="true"
+                                location="0 -0.5 0"></PointLight>
+                </Transform>
+              <Group USE="FONAR"></Group>
+          </Transform>
+          <!--</ФОНАРЬ1>-->
+          <ColorInterpolator DEF='ColInt' key='0 0.4 0.6 1' keyValue='0 0.5 0, 0 0.3 0.5,0.5 0 0.3,0 0.5 0 '></ColorInterpolator>
+          <ROUTE fromNode='Time' fromField='fraction_changed'
+               toNode='ColInt' toField='set_fraction'>
+        </ROUTE>
+        <ROUTE fromNode='ColInt' fromField='value_changed'
+               toNode='Mat' toField='set_diffuseColor'>
+        </ROUTE>
           </Scene>
       </X3D>
   </body>
